Historia zapisywana dla obecnie zalogowanego użytkownika