@@ -11,23 +11,15 @@ public class ResponseError {
     private String message;
     private List<String> errors;
 
-
     public ResponseError() {
         super();
-    }
-
-    public ResponseError(final HttpStatus status, final String message, final List<String> errors) {
-        super();
-        this.status = status;
-        this.message = message;
-        this.errors = errors;
     }
 
     public ResponseError(final HttpStatus status, final String message, final String error) {
         super();
         this.status = status;
         this.message = message;
-        errors = Arrays.asList(error);
+        errors = List.of(error);
     }
 
     public HttpStatus getStatus() {
@@ -41,7 +33,5 @@ public class ResponseError {
     public List<String> getErrors() {
         return errors;
     }
-
-
 
 }
